# CppLab

./: .editorconfig  CMakeLists.txt  CMakePresets.json
Common/: core.h
CppLab/: GenerateParulaColormap.h  Source.cpp  TestAABBPlane.h  TestConcat.h  TestEnum.h  TestFloat.h  TestMem.h  TestOverflow.h  TestSingleton.h  TestThread.h  TestThread2.h  TestThread4.h  TestVisitor.h  fmath.h  stdafx.h
Mem/: CMakeLists.txt  allocator.h  benchmark.cpp  benchmark.h  callocator.cpp  callocator.h  common.h  io.h  linear_allocator.cpp  linear_allocator.h  mem.cpp  mem_bench.cpp  mem_common.cpp  mem_common.h  mem_test.cpp  stl_allocator_adapter.h  stl_simple_allocator.h  utils.h
Template/: CMakeLists.txt  SFINAE_test.h  Template.cpp
Test/: CMakeLists.txt  main.cpp
